# Commit-wise

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  python-ci.yml
gai/: __init__.py  __main__.py
gai/analyzers/: local.py
gai/cli/: main.py
gai/config/: settings.py
gai/git/: staged.py
gai/hooks/: install.py
gai/prompts/: review_prompt.py
gai/providers/: reviewer.py
tests/: test_cli.py  test_hooks.py  test_reviewer.py
