[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gai-review"
version = "0.1.0"
description = "Git staged-change AI review helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gai = "gai.cli.main:main"
