[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitwise-review"
version = "0.1.4"
description = "Git staged-change AI review helper"
readme = "README.md"
authors = [
    {name = "Gokulakrishnan"}
]
requires-python = ">=3.11"
dependencies = [
    "keyring",
    "azure-ai-inference"
]

[project.scripts]
commit-wise = "gai.cli.main:main"
gai = "gai.cli.main:main"
